# UNRAVEL

./: .buildinfo  .command_log.txt  .gitignore  Installation  LICENSE  README  README.md  commands.html  genindex.html  guide.html  guide_mms.html  index.html  installation.html  installation.txt  modules.html  objects.inv  project_structure.txt  py-modindex.html  pyproject.toml  search.html  searchindex.js  unravel.cluster_stats.effect_sizes.html  unravel.cluster_stats.html  unravel.core.html  unravel.html  unravel.image_io.html  unravel.image_tools.atlas.html  unravel.image_tools.html  unravel.region_stats.html  unravel.register.html  unravel.segment.html  unravel.utilities.html  unravel.voxel_stats.html  unravel.warp.html
.github/workflows/: deploy_docs.yml
Heifets_lab_FIJI_macros/: 100_Include_slices_split.ijm  100sliceSubstacks_ClusterConsensus.ijm  100sliceSubstacks_ClusterConsensus2.ijm  102_Exclude_slices_split.ijm  25include_split.ijm  27exclude_split.ijm  2xDS.ijm  2xDS_488.ijm  2xDS_488_tif.ijm  34_Exclude_slices_split.ijm  34_Include_slices_split.ijm  35_Exclude_slices_split.ijm  3D_count_CPU.ijm  3D_count_ExcludeEdges.ijm  3D_count_IncludeEdges.ijm  488min.ijm  ABA_within_tissue_2xDS_tif.ijm  ABA_within_tissue_full_res.ijm  ABAconsensus.ijm  ABAconsensus_25sliceSubstacks.ijm  ABAseg_25sliceSubstacks.ijm  ABAseg_3D_count_ExcludeEdges.ijm  ABAseg_3D_count_IncludeEdges.ijm  ClusterConsensus.ijm  adjust_dr.ijm  consensus_part1.ijm  consensus_part2.ijm  consensus_part3.ijm  consensus_part4.ijm  consensus_seg_ilastik_part4.ijm  convert_to_ABA_intensities.ijm  crop_cluster.ijm  crop_cluster_image_sequence.ijm  czi_to_tif.ijm  draw_cluster_outline.ijm  draw_cluster_outline_in_full_tif.ijm  extract_most_sig_slice.ijm  ilastik_invert_binary.ijm  integrated_densities_for_stack.ijm  invert_nii.ijm  (+9 more)
Heifets_lab_excel_templates/: 3dc_LH_template_fractional_gubra.xlsx  3dc_RH_template_fractional_gubra.xlsx  ABA_Gubra_regional_volumes_cluster1.xlsm  ABA_Gubra_regional_volumes_template_w_OB.xlsm  ABA_gubra_histo_template.xlsx  IDPath_ID_Abrv_Name_Hierarchy.xlsx  RGB_for_ABA_v2.xlsm  cluster_X_ABA_volumes_template.xlsx  get_RGB_For_Volumes_fstat3_sun_burst_plot.xlsm  sig_clusters_WB_histo_for_DSI-studio.txt  sig_clusters_WB_histo_for_DSI-studio.xlsx
Heifets_lab_scripts/: 3D_brain.py  3D_spatial_average.py  3d_count_100_slice_stacks_w_errors.sh  3d_count_cluster.sh  3d_count_cluster2.sh  488_to_nii.sh  ABA_histo_2xDS.sh  ABA_histo_2xDS_tif.sh  ABA_histo_fibers_full_res.sh  ABA_histo_full_res.sh  ABA_histo_in_tissue_2xDS.sh  ABA_histo_in_tissue_2xDS_tif.sh  ABA_histo_in_tissue_full_res.sh  ABA_to_native.sh  ABA_to_native_2xDS.sh  ABA_to_native_2xDS_tif.sh  ABA_volumes.py  ABA_volumes.sh  ABAcluster.sh  ABAcluster_counts.sh  ABAcluster_volumes.sh  ABAconsensus.sh  ABAconsensus_3dc.sh  ABAseg.sh  ABAseg_3dc.sh  ABAseg_3dc_IF.sh  ANTsPy_affine_initializer.py  CCFv3_ID_dict__2017_to_2020.csv  CCFv3_conv_IDs_2017_to_2020_draft.py  CCFv3_info.csv  CCFv3_nrrd_to_nii.py  IF_outliers.py  adjust_dr.sh  aggregate_files_from_sample_dirs.py  aggregate_files_w_recursive_search.py  apply_mask.py  apply_mask2.py  apply_mask_to_image.py  argparse_utils.py  argparse_utils_rich.py  (+253 more)
_modules/: index.html
_modules/unravel/: command_list.html  unravel_commands.html
_other/: brain_mask_outline.py
_other/_legacy/: CCF30_to_gubra.py  gubra_to_CCF.py  gubra_to_CCF30.py  gubra_to_CCF50.py  gubra_to_CCF_50um.py
_other/_testing/: _test.py  _test2.py  _test3.py  dev2_test.py  get_samples.py
_other/drafts/: 360_animation.py  ANOVA_draft.py  Allen_RNAseq_expression.py  Allen_RNAseq_expression_in_cell_types.py  Allen_RNAseq_expression_in_mice.py  Allen_RNAseq_expression_in_mice_neurons_astro_ug.py  Allen_RNAseq_expression_in_mouse_MSNs.py  Allen_RNAseq_expression_in_mouse_cells_test.py  Allen_RNAseq_expression_in_neurons_astro_ug.py  CCF30_to_MERFISH.py  CCF30_to_MERFISH30.py  abc_cache_cli.py  check_reg_fsleyes.py  cluster_ttests.py  collapse_atlas.py  correlation.py  correlation_parallel.py  correlation_parallel_to_nii.py  correlation_permutation.py  cstats_adding_stats_options.py  csv_to_nii.py  dot_plot.py  ez_thr.py  filter_csv.py  filter_objects_by_size.py  fsleyes.py  h5_to_tifs_batch.py  img_math_draft.py  img_stats_draft.py  load_czi_subset.py  merfish.py  merfish_3D.py  merfish_ccf_mpl.py  merfish_ccf_nii_2D.py  merfish_ccf_nii_3D.py  merfish_heatmap.py  merfish_imputed_genes.py  merfish_resample.py  merfish_resample_w_summing.py  mixedlm_LSFM_csv.py  (+16 more)
_other/example_scripts/: example_script_for_processing_samples.py  example_script_for_processing_samples_w_comments.py
_other/fsleyes_luts/: WHS_SD_rat_atlas_v4.lut  ccfv3_2017.lut  ccfv3_2020.lut  instructions_for_setting_up_LUTs_for_FSLeyes.txt  path_to_place_random.lut_for_Allen_coloring_of_atlas_labels.txt
_other/uncommon_scripts/: brain_mask_outline.py
_sources/: commands.md.txt  guide.md.txt  guide_mms.md.txt  index.rst.txt  installation.md.txt  modules.rst.txt  unravel.cluster_stats.rst.txt  unravel.core.rst.txt  unravel.region_stats.rst.txt  unravel.rst.txt  unravel.utilities.rst.txt  unravel.voxel_stats.rst.txt
_sources/unravel/: command_list.rst.txt  toc.rst.txt
_static/: custom.css
old_scripts/: czi_to_nii_czifile.py  metadata.sh  prep_reg.sh
old_scripts/input_option_and_script_decorator/: czi_to_reg_input.py  unravel_utils.py
old_scripts/sample_list_and_loop/: prep_reg.py  unravel_utils.py
scripts_from_MIRACL/: miracl_conv_convertTIFFtoNII.py  miracl_conv_convertTIFFtoNII_simplified.py  miracl_reg_clar-allen_whole_brain_iDISCO.sh  miracl_reg_warp_clar_data_to_gubra.sh  registration3.sh  registration4.sh
scripts_in_progress/: metadata.py
unravel/: command_list.html  command_list.py  env_var.sh  toc.html  unravel_commands.html  unravel_commands.py
unravel/abca/: cache.html  cell_type_proportions.py  cell_type_proportions_concat.py  csv_concat_with_source.py  merfish.py  merfish_filter.py  sunburst_expression.py  sunburst_filter.py  sunburst_filter_by_proportion.py  toc.html  zarr_to_tifs.py
unravel/core/: config.py  (+16 more)
(+1646 files in other folders)
