[project]
name = "heifetslab-unravel"
version = "1.0.0b10"
description = "UNRAVEL: UN-biased high-Resolution Analysis and Validation of Ensembles using Light sheet images"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Daniel Ryskamp Rijsketic", email = "danrijs@stanford.edu" }, 
    { name = "Austen Brooks Casey", email = "abcasey@stanford.edu" }, 
    { name = "Boris Dov Heifets", email = "bheifets@stanford.edu" }
]
maintainers = [
    { name = "Daniel Ryskamp Rijsketic", email = "danrijs@stanford.edu" }
]
dependencies = [
    "aicspylibczi>=3.1.2,<4.0.0",
    "antspyx>=0.4.2,<1.0.0",
    "connected_components_3d>=3.12.3,<4.0.0",
    "czifile>=2019.7.2,<2020.0.0",
    "dask>=2023.4.1,<2024.0.0",
    "fslpy>=3.18.2,<4.0.0",
    "h5py>=3.8.0,<4.0.0",
    "lxml>=4.9.3,<5.0.0",
    "matplotlib>=3.7.1,<4.0.0",
    "nibabel>=5.2.1,<6.0.0",
    "numpy==1.24.4",  # was "numpy>=1.25.2,<2.0.0" and 1.26.4 would be installed, but 1.25 or 1.26 causes a warning in WSL
    "opencv_python>=4.7.0.72,<5.0.0",
    "openpyxl>=3.1.2,<4.0.0",
    "pandas>=1.5.3,<2.0.0",
    "rich>=13.7.1,<14.0.0",
    "rich_argparse>=1.4.0,<2.0.0",
    "scipy>=1.13.1,<2.0.0",
    "seaborn>=0.13.2,<1.0.0",
    "setuptools>=77.0.0",
    "statsmodels>=0.14.0,<1.0.0",
    "termcolor>=2.4.0,<3.0.0",
    "tifffile>=2023.8.30,<2024.0.0",
    "zarr>=2.14.2,<3.0.0"
]
keywords = ["neuroscience", "image analysis", "light sheet microscopy", "brain mapping", "data analysis", "voxel-wise analysis", "cell density quantification"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]

[project.optional-dependencies]
dev = [
    "myst-parser",
    "python-cfonts",
    "pydata_sphinx_theme",
    "sphinx",
    "sphinx-autobuild", 
    "sphinx-togglebutton", 
    "sphinx-design",
    "sphinxcontrib-mermaid",
    "build",
    "twine"
]

[project.urls]
"Homepage" = "https://github.com/b-heifets/UNRAVEL"
"Documentation" = "https://b-heifets.github.io/UNRAVEL/"

[tool.setuptools]
package-dir = {"" = "."}
packages = { find = {} }
license-files = []

[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
unravel_commands = "unravel.unravel_commands:main"
uc = "unravel.unravel_commands:main"
atlas_relabel = "unravel.image_tools.atlas.relabel_nii:main"
relabel = "unravel.image_tools.atlas.relabel_nii:main"
atlas_wireframe = "unravel.image_tools.atlas.wireframe:main"
wf = "unravel.image_tools.atlas.wireframe:main"
cstats_fdr_range = "unravel.cluster_stats.fdr_range:main"
fr = "unravel.cluster_stats.fdr_range:main"
cstats_fdr = "unravel.cluster_stats.fdr:main"
f = "unravel.cluster_stats.fdr:main"
cstats_mirror_indices = "unravel.cluster_stats.recursively_mirror_rev_cluster_indices:main"
mirror_ci = "unravel.cluster_stats.recursively_mirror_rev_cluster_indices:main"
cstats_brain_model = "unravel.cluster_stats.brain_model:main"
cbm = "unravel.cluster_stats.brain_model:main"
cstats_find_incongruent = "unravel.cluster_stats.find_incongruent_clusters:main"
cfi = "unravel.cluster_stats.find_incongruent_clusters:main"
cstats_sunburst = "unravel.cluster_stats.sunburst:main"
sunburst = "unravel.cluster_stats.sunburst:main"
cstats_group_data = "unravel.cluster_stats.group_bilateral_data:main"
gd = "unravel.cluster_stats.group_bilateral_data:main"
cstats_index = "unravel.cluster_stats.index:main"
ci = "unravel.cluster_stats.index:main"
cstats_legend = "unravel.cluster_stats.legend:main"
legend = "unravel.cluster_stats.legend:main"
cstats_org_data = "unravel.cluster_stats.org_data:main"
cod = "unravel.cluster_stats.org_data:main"
cstats_prism = "unravel.cluster_stats.prism:main"
prism = "unravel.cluster_stats.prism:main"
cstats = "unravel.cluster_stats.cstats:main"
cstats_fstat_sig_vx_mask = "unravel.cluster_stats.fstat_sig_vx_mask:main"
fsvm = "unravel.cluster_stats.fstat_sig_vx_mask:main"
cs = "unravel.cluster_stats.cstats:main"
cstats_summary_config = "unravel.cluster_stats.cstats_summary_config:main"
csc = 'unravel.cluster_stats.cstats_summary_config:main'
cstats_summary = "unravel.cluster_stats.summary:main"
css = "unravel.cluster_stats.summary:main"
cstats_table = "unravel.cluster_stats.table:main"
ct = "unravel.cluster_stats.table:main"
cstats_validation = "unravel.cluster_stats.validation:main"
cv = "unravel.cluster_stats.validation:main"
cstats_crop = "unravel.cluster_stats.crop:main"
crop = "unravel.cluster_stats.crop:main"
cstats_mean_IF = "unravel.cluster_stats.mean_IF:main"
cmi = "unravel.cluster_stats.mean_IF:main"
cstats_mean_IF_summary = "unravel.cluster_stats.mean_IF_summary:main"
cmis = "unravel.cluster_stats.mean_IF_summary:main"
cstats_clusters = "unravel.cluster_stats.clusters:main"
clusters = "unravel.cluster_stats.clusters:main"
effect_sizes = "unravel.cluster_stats.effect_sizes.effect_sizes:main"
es = "unravel.cluster_stats.effect_sizes.effect_sizes:main"
effect_sizes_sex_abs = "unravel.cluster_stats.effect_sizes.effect_sizes_by_sex__absolute:main"
essa = "unravel.cluster_stats.effect_sizes.effect_sizes_by_sex__absolute:main"
effect_sizes_sex_rel = "unravel.cluster_stats.effect_sizes.effect_sizes_by_sex__relative:main"
essr = "unravel.cluster_stats.effect_sizes.effect_sizes_by_sex__relative:main"
io_h5_to_tifs = "unravel.image_io.h5_to_tifs:main"
h2t = "unravel.image_io.h5_to_tifs:main"
io_img = "unravel.image_io.io_img:main"
img = "unravel.image_io.io_img:main"
io_img_to_npy = "unravel.image_io.img_to_npy:main"
i2np = "unravel.image_io.img_to_npy:main"
io_metadata = "unravel.image_io.metadata:main"
m = "unravel.image_io.metadata:main"
io_nii_hd = "unravel.image_io.nii_hd:main"
hd = "unravel.image_io.nii_hd:main"
io_nii_info = "unravel.image_io.nii_info:main"
i = "unravel.image_io.nii_info:main"
io_nii = "unravel.image_io.io_nii:main"
nii = "unravel.image_io.io_nii:main"
io_nii_to_tifs = "unravel.image_io.nii_to_tifs:main"
n2t = "unravel.image_io.nii_to_tifs:main"
io_nii_to_zarr = "unravel.image_io.nii_to_zarr:main"
n2z = "unravel.image_io.nii_to_zarr:main"
io_reorient_nii = "unravel.image_io.reorient_nii:main"
reorient = "unravel.image_io.reorient_nii:main"
io_tif_to_tifs = "unravel.image_io.tif_to_tifs:main"
t2t = "unravel.image_io.tif_to_tifs:main"
io_zarr_to_nii = "unravel.image_io.zarr_to_nii:main"
z2n = "unravel.image_io.zarr_to_nii:main"
io_points_to_img = "unravel.image_io.points_to_img:main"
p2i = "unravel.image_io.points_to_img:main"
io_img_to_points = "unravel.image_io.img_to_points:main"
i2p = "unravel.image_io.img_to_points:main"
img_math = "unravel.image_tools.math:main"
math = "unravel.image_tools.math:main"
img_avg = "unravel.image_tools.avg:main"
avg = "unravel.image_tools.avg:main"
img_bbox = "unravel.image_tools.bbox:main"
bbox = "unravel.image_tools.bbox:main"
img_extend = "unravel.image_tools.extend:main"
extend = "unravel.image_tools.extend:main"
img_max = "unravel.image_tools.max:main"
max = "unravel.image_tools.max:main"
img_pad = "unravel.image_tools.pad:main"
pad = "unravel.image_tools.pad:main"
img_resample = "unravel.image_tools.resample:main"
resample = "unravel.image_tools.resample:main"
img_spatial_avg = "unravel.image_tools.spatial_averaging:main"
spatial_avg = "unravel.image_tools.spatial_averaging:main"
img_DoG = "unravel.image_tools.DoG:main"
dog = "unravel.image_tools.DoG:main"
img_rb = "unravel.image_tools.rb:main"
rb = "unravel.image_tools.rb:main"
img_transpose = "unravel.image_tools.transpose_axes:main"
transpose = "unravel.image_tools.transpose_axes:main"
img_unique = "unravel.image_tools.unique_intensities:main"
unique = "unravel.image_tools.unique_intensities:main"
img_resample_points = "unravel.image_tools.resample_points:main"
resample_points = "unravel.image_tools.resample_points:main"
img_modify_labels = "unravel.image_tools.modify_labels:main"
ml = "unravel.image_tools.modify_labels:main"
rstats_summary = "unravel.region_stats.rstats_summary:main"
rss = "unravel.region_stats.rstats_summary:main"
rstats = "unravel.region_stats.rstats:main"
rstats_mean_IF = "unravel.region_stats.rstats_mean_IF:main"
rmi = "unravel.region_stats.rstats_mean_IF:main"
rstats_mean_IF_in_seg = "unravel.region_stats.rstats_mean_IF_in_segmented_voxels:main"
rmiis = "unravel.region_stats.rstats_mean_IF_in_segmented_voxels:main"
rstats_mean_IF_summary = "unravel.region_stats.rstats_mean_IF_summary:main"
rmis = "unravel.region_stats.rstats_mean_IF_summary:main"
reg_affine_initializer = "unravel.register.affine_initializer:main"
rai = "unravel.register.affine_initializer:main"
reg_affine_initializer_check = "unravel.register.affine_initializer_check:main"
raic = "unravel.register.affine_initializer_check:main"
reg_check_brain_mask = "unravel.register.reg_check_brain_mask:main"
rcbm = "unravel.register.reg_check_brain_mask:main"
reg_prep = "unravel.register.reg_prep:main"
rp = "unravel.register.reg_prep:main"
reg = "unravel.register.reg:main"
reg_check = "unravel.register.reg_check:main"
rc = "unravel.register.reg_check:main"
reg_check_fsleyes = "unravel.register.reg_check_fsleyes:main"
rcf = "unravel.register.reg_check_fsleyes:main"
seg_brain_mask = "unravel.segment.brain_mask:main"
sbm = "unravel.segment.brain_mask:main"
seg_copy_tifs = "unravel.segment.copy_tifs:main"
sct = "unravel.segment.copy_tifs:main"
seg_ilastik = "unravel.segment.ilastik_pixel_classification:main"
si = "unravel.segment.ilastik_pixel_classification:main"
seg_labels_to_masks = "unravel.segment.labels_to_masks:main"
sl2m = "unravel.segment.labels_to_masks:main"
utils_get_samples = "unravel.utilities.get_samples:main"
s = "unravel.utilities.get_samples:main"
utils_process_samples = "unravel.utilities.process_samples:main"
ups = "unravel.utilities.process_samples:main"
utils_agg_files = "unravel.utilities.aggregate_files_from_sample_dirs:main"
agg = "unravel.utilities.aggregate_files_from_sample_dirs:main"
utils_agg_files_rec = "unravel.utilities.aggregate_files_recursively:main"
agg_rec = "unravel.utilities.aggregate_files_recursively:main"
utils_clean_tifs = "unravel.utilities.clean_tif_dirs:main"
clean_tifs = "unravel.utilities.clean_tif_dirs:main"
utils_prepend = "unravel.utilities.prepend_conditions:main"
prepend = "unravel.utilities.prepend_conditions:main"
utils_rename = "unravel.utilities.rename:main"
name = "unravel.utilities.rename:main"
utils_toggle = "unravel.utilities.toggle_samples:main"
toggle = "unravel.utilities.toggle_samples:main"
utils_points_compressor = "unravel.utilities.points_compressor:main"
points_compressor = "unravel.utilities.points_compressor:main"
utils_region_info = "unravel.utilities.region_info:main"
region = "unravel.utilities.region_info:main"
vstats_apply_mask = "unravel.voxel_stats.apply_mask:main"
apply_mask = "unravel.voxel_stats.apply_mask:main"
vstats_hemi_to_avg = "unravel.voxel_stats.hemi_to_LR_avg:main"
h2a = "unravel.voxel_stats.hemi_to_LR_avg:main"
vstats_whole_to_avg = "unravel.voxel_stats.whole_to_LR_avg:main"
lr_avg = "unravel.voxel_stats.whole_to_LR_avg:main"
vstats_mirror = "unravel.voxel_stats.mirror:main"
mirror = "unravel.voxel_stats.mirror:main"
vstats_prep = "unravel.voxel_stats.vstats_prep:main"
vp = "unravel.voxel_stats.vstats_prep:main"
vstats = "unravel.voxel_stats.vstats:main"
vs = "unravel.voxel_stats.vstats:main"
vstats_z_score = "unravel.voxel_stats.z_score:main"
zs = "unravel.voxel_stats.z_score:main"
vstats_z_score_cwd = "unravel.voxel_stats.z_score_cwd:main"
zsc = "unravel.voxel_stats.z_score_cwd:main"
vstats_check_fsleyes = "unravel.voxel_stats.vstats_check_fsleyes:main"
vcf = "unravel.voxel_stats.vstats_check_fsleyes:main"
warp_to_atlas = "unravel.warp.to_atlas:main"
w2a = "unravel.warp.to_atlas:main"
warp_to_fixed = "unravel.warp.to_fixed:main"
w2f = "unravel.warp.to_fixed:main"
warp_to_native = "unravel.warp.to_native:main"
w2n = "unravel.warp.to_native:main"
warp_points_to_atlas = "unravel.warp.points_to_atlas:main"
wp2a = "unravel.warp.points_to_atlas:main"
warp = "unravel.warp.warp:main"
abca_merfish = "unravel.abca.merfish.merfish:main"
mf = "unravel.abca.merfish.merfish:main"
abca_cache = "unravel.abca.cache:main"
cache = "unravel.abca.cache:main"
abca_sunburst = "unravel.abca.sunburst.sunburst:main"
sb = "unravel.abca.sunburst.sunburst:main"
abca_merfish_filter = "unravel.abca.merfish.merfish_filter:main"
mf_filter = "unravel.abca.merfish.merfish_filter:main"
abca_merfish_expression_to_nii = "unravel.abca.merfish.merfish_expression_to_nii:main"
me = "unravel.abca.merfish.merfish_expression_to_nii:main"
abca_merfish_cells_to_nii = "unravel.abca.merfish.merfish_cells_to_nii:main"
mc = "unravel.abca.merfish.merfish_cells_to_nii:main"
abca_merfish_filter_by_mask = "unravel.abca.merfish.merfish_filter_by_mask:main"
mf_filter_mask = "unravel.abca.merfish.merfish_filter_by_mask:main"
abca_sunburst_expression = "unravel.abca.sunburst.sunburst_expression:main"
sbe = "unravel.abca.sunburst.sunburst_expression:main"
abca_sunburst_filter_by_expression = "unravel.abca.sunburst.abca_sunburst_filter_by_expression:main"
sfbe = "unravel.abca.sunburst.abca_sunburst_filter_by_expression:main"
abca_sunburst_filter_by_proportion = "unravel.abca.sunburst.sunburst_filter_by_proportion:main"
sfbp = "unravel.abca.sunburst.sunburst_filter_by_proportion:main"
abca_mean_expression_color_scale = "unravel.abca.sunburst.mean_expression_color_scale:main"
mecs = "unravel.abca.sunburst.mean_expression_color_scale:main"
abca_percent_expression_color_scale = "unravel.abca.sunburst.percent_expression_color_scale:main"
pecs = "unravel.abca.sunburst.percent_expression_color_scale:main"
abca_scRNA-seq_filter = "unravel.abca.scRNA_seq.filter:main"
s_filter = "unravel.abca.scRNA_seq.filter:main"
gta_download_STPT_zarr = "unravel.allen_institute.genetic_tools_atlas.download_STPT_zarr:main"
gta_dl = "unravel.allen_institute.genetic_tools_atlas.download_STPT_zarr:main"
gta_zarr_level_to_tifs = "unravel.allen_institute.genetic_tools_atlas.zarr_level_to_tifs:main"
gta_zlt = "unravel.allen_institute.genetic_tools_atlas.zarr_level_to_tifs:main"
# TODO: add tabular commands to the guide
tabular_edit_columns = "unravel.tabular.edit_columns:main"
edit_cols = "unravel.tabular.edit_columns:main"
tabular_filter_rows = "unravel.tabular.filter_rows:main"
filter_rows = "unravel.tabular.filter_rows:main"
tabular_key_value_to_table = "unravel.tabular.key_value_to_table:main"
kv_table = "unravel.tabular.key_value_to_table:main"
tabular_columns = "unravel.tabular.columns:main"
cols = "unravel.tabular.columns:main"
tabular_unique_values = "unravel.tabular.unique_values:main"
uniq_vals = "unravel.tabular.unique_values:main"